--- a/text/BP_Jaroslav_Veselý.tex
+++ b/text/BP_Jaroslav_Veselý.tex
@@ -28,8 +28,8 @@
 % ODTUD DAL VSE ZMENTE
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-\department{Katedra \ldots (DOPLŇTE)}
-\title{Doplňte název práce}
+\department{Katedra \ldots (softwarového inženýrství)}
+\title{Systém pro skórování Ultimate Frisbee zápasů - frontend}
 \authorGN{Jaroslav} %(křestní) jméno (jména) autora
 \authorFN{Veselý} %příjmení autora
 \authorWithDegrees{Jaroslav Veselý} %jméno autora včetně současných akademických titulů
@@ -56,6 +56,8 @@
 \chapter{Analýza a návrh}
 
 \chapter{Realizace}
+
+% TODO 
 
 \begin{conclusion}
 	%sem napište závěr Vaší práce
