adjusted and simplified api callback functions

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,19 @@
+- nacist - MatchSelect - udaje turnaje se zapasy (data.name v nadpisu)
 - ukonceni zapasu
 - zobrazit informaci o prihlasenem uzivateli
+
+===================================================================================================
+dohodnout:
+- pokryti funkcionality
+	- zmena funkcnich / nefunkcnich pozadavku ?
+	- cile uzivatele, persony
+
+- zapisovani probihajiciho hodnoceni, jak ukoncit zapas (=dohrano, popr. muze byt i jina situace ?)
+- jak se autorizovat na zapisovani dat (alespon prizatim)
+- format akce POST pro novy turnaj (zkusit pripravit)
+
+- styl filtrovani 
+	- zapasy k hodnoceni, u kterych zobrazit vysledky
+	- ukoncene, probihajici, nadchazejici turnaje
+	- hraci v zapasu
+	? nacist vse a filtrovat v js nebo resit na strane db
