--- a/text/BP_Jaroslav_Veselý_2016.tex
+++ b/text/BP_Jaroslav_Veselý_2016.tex
@@ -28,19 +28,19 @@
 % ODTUD DAL VSE ZMENTE
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-\department{Katedra \ldots (softwarového inženýrství)}
+\department{Katedra softwarového inženýrství}
 \title{Systém pro skórování Ultimate Frisbee zápasů - frontend}
 \authorGN{Jaroslav} %(křestní) jméno (jména) autora
 \authorFN{Veselý} %příjmení autora
 \authorWithDegrees{Jaroslav Veselý} %jméno autora včetně současných akademických titulů
-\supervisor{Jiří Hunka}
-\acknowledgements{Doplňte, máte-li komu a za co děkovat. V~opačném případě úplně odstraňte tento příkaz.}
+\supervisor{Ing. Jiří Hunka}
+%\acknowledgements{Doplňte, máte-li komu a za co děkovat. V~opačném případě úplně odstraňte tento příkaz.}
 \abstractCS{V~několika větách shrňte obsah a přínos této práce v~češtině. Po přečtení abstraktu by se čtenář měl mít čtenář dost informací pro rozhodnutí, zda chce Vaši práci číst.}
 \abstractEN{Sem doplňte ekvivalent abstraktu Vaší práce v~angličtině.}
 \placeForDeclarationOfAuthenticity{V~Praze}
 \declarationOfAuthenticityOption{4} %volba Prohlášení (číslo 1-6)
-\keywordsCS{Nahraďte seznamem klíčových slov v češtině oddělených čárkou.}
-\keywordsEN{Nahraďte seznamem klíčových slov v angličtině oddělených čárkou.}
+\keywordsCS{frontend, ultimate frisbee, uživatelské rozhraní}
+\keywordsEN{frontend, ultimate frisbee, user interface}
 
 \begin{document}
 
@@ -49,15 +49,36 @@
 
 \begin{introduction}
 	%sem napište úvod Vaší práce
+	Cílem bakalářské práce je implementace frontendu pro webovou aplikaci umožňující skórování frisbee a následné poskytování statistik. Aplikace je vyvíjena v rámci dvou souběžných bakalářských prací, tato je zaměřena na frontend a uživatelské rozhraní, druhá na backend.
+
+	\section{Ultimate frisbee}
+
+	Ultimate frisbee je sport, ve kterém soutěží vždy dva týmy proti sobě a vítězí tým s vyšším počtem bodů. Na rozdíl od ostatních sportů je ale Utimate Frisbee přímo založené na sportovním duchu. Kromě klasického bodování průběhu hry se ještě hodnotí Spirit of the Game. Hráči tedy po každém zápase hodnotí férovost soupeře. V každém turnaji se vyhlašuje i cena Spirit of the game, která je ceněna obdobně jako cena za první místo. Díky tomuto přístupu mají odpovědnost za férovost hry samotní hráči a není zde zapotřebí rozhodčí \cite{frisbee}.
+
+	Hodnocení pomocí aplikace je zde ještě větším přínosem než u většiny sportů právě kvůli hodnocení férovosti (sportovního ducha) soupeře. Toho hodnocení se jinak vyplňuje na papírovém dotazníku, které je zapotřebí zpracovat. Aplikace by tuto práci měla značně usnadnit.
+
+	\section{Motivace}
+	
+	Realizace této práce vzešla z nápadu na rozšíření mobilní aplikace Catcher, kterou čeští hráči frisbee používají. 
+	Jeden z požadavků byl, aby se aplikace dala použít na různých zařízeních, jelikož pro organizaci turnaje je pohodlnější použít notebook či stolní počítač, kdežto pro získání informací o zápasech, turnajích a hodnocení spirit of the game může být praktičtější mobilní zařízení.
+
 \end{introduction}
 
-\chapter{Cíl práce}
-
 \chapter{Analýza a návrh}
+	
+	
+
+	% TODO posat klíčové akce, které budou uživatelé provádět
+
+	% TODO posat další funkcionalitu aplikace
+
+	% TODO proc webova aplikace?
+
+	% TODO použité technologie
 
 \chapter{Realizace}
 
-% TODO 
+	% TODO 
 
 \begin{conclusion}
 	%sem napište závěr Vaší práce
