--- a/text/BP_Jaroslav_Veselý_2016.tex
+++ b/text/BP_Jaroslav_Veselý_2016.tex
@@ -139,7 +139,7 @@
 	Uživatel je o výsledku každé akce informován pomocí zprávy, která je stylovaná, tedy i barevně odlišená podle obsahu, bootstrapem.
 
 	\subsubsection{Propojení systému s reálným světem}
-	Neměly by být použité žádné termíny neznámé uživateli, některá slova jsou převzata z prostření frisbee, jinak je použitá jen běžná slovní zásoba. Chybové hlášky obsahujý nejdříve prostý text popisující chybu běžnému uživateli, pokud je chyba způsobena systémem je o tom uživatel ve zprávě informován. Jestliže jsou k dispozici další poskytnutelné upřesňující informace o chybě, jsou zahrnuty ve zprávě z důvodu rozpoznání chyby vývojáři.
+	Neměly by být použité žádné termíny neznámé uživateli, některá slova jsou převzata z prostření frisbee, jinak je použitá jen běžná slovní zásoba.
 
 	\subsubsection{Uživatelova kontrola a svoboda}
 	Celá aplikace podporuje tlačítka "zpět" a "dopředu". Při vícekrokovém procesu je vždy možnost vrátit se zpět také pomocí již víše zmiňovaných záložek.
@@ -154,10 +154,13 @@
 	Prozatím není aplikace příliš rozsáhlá a není zapotřebí mnoho kroků pro dokončení libovolné akce, navíc jsou všechny kroky povinné, pouze minimum informací je doplňujícího či popisujícího charakteru.
 
 	\subsubsection{Estetický a minimalisticý design}
+	Každá stránka obsahuje pouze informace k dané akci a informace k tomu potřebné, jakékoli zprávy poskytované uživateli jsou shrnuté do stručné věty, popřípadě několika málo vět vystihujících dění v aplikaci.
 
 	\subsubsection{Pomoci uživatelům rozpoznat, diagnostikovat a zotavit se z chyb}
+	Chybové hlášky obsahujý nejdříve prostý text popisující chybu běžnému uživateli, pokud je chyba způsobena systémem je o tom uživatel ve zprávě informován. Jestliže jsou k dispozici další poskytnutelné upřesňující informace o chybě, jsou zahrnuty ve zprávě z důvodu rozpoznání chyby vývojáři.
 
 	\subsubsection{Pomoc a dokumentace}
+	% TODO
 
 	\subsection{Kognitivní průchod}
 
