--- a/text/BP_Jaroslav_Veselý_2016.tex
+++ b/text/BP_Jaroslav_Veselý_2016.tex
@@ -48,123 +48,141 @@
 % \newacronym{FIT}{FIT}{Fakulta informa{\v c}n{\' i}ch technologi{\' i}}
 
 \begin{introduction}
-	%sem napište úvod Vaší práce
+
 	Cílem bakalářské práce je implementace frontendu pro webovou aplikaci umožňující skórování frisbee a následné poskytování statistik. Aplikace je vyvíjena v rámci dvou souběžných bakalářských prací, tato je zaměřena na frontend a uživatelské rozhraní, druhá na backend.
 
 	\section{Ultimate frisbee}
 
-	Ultimate frisbee je sport, ve kterém soutěží vždy dva týmy proti sobě a vítězí tým s vyšším počtem bodů. Na rozdíl od ostatních sportů je ale Utimate Frisbee přímo založené na sportovním duchu. Kromě klasického bodování průběhu hry se ještě hodnotí Spirit of the Game. Hráči tedy po každém zápase hodnotí férovost soupeře. V každém turnaji se vyhlašuje i cena Spirit of the game, která je ceněna obdobně jako cena za první místo. Díky tomuto přístupu mají odpovědnost za férovost hry samotní hráči a není zde zapotřebí rozhodčí \cite{frisbee}.
+		Ultimate frisbee je sport, ve kterém soutěží vždy dva týmy proti sobě a vítězí tým s vyšším počtem bodů. Na rozdíl od ostatních sportů je ale Utimate Frisbee přímo založené na sportovním duchu. Kromě klasického bodování průběhu hry se ještě hodnotí Spirit of the Game. Hráči tedy po každém zápase hodnotí férovost soupeře. V každém turnaji se vyhlašuje i cena Spirit of the game, která je ceněna obdobně jako cena za první místo. Díky tomuto přístupu mají odpovědnost za férovost hry samotní hráči a není zde zapotřebí rozhodčí \cite{frisbee}.
 
-	Hodnocení pomocí aplikace je zde ještě větším přínosem než u většiny sportů právě kvůli hodnocení férovosti (sportovního ducha) soupeře. Toho hodnocení se jinak vyplňuje na papírovém dotazníku, které je zapotřebí zpracovat. Aplikace by tuto práci měla značně usnadnit.
+		Hodnocení pomocí aplikace je zde ještě větším přínosem než u většiny sportů právě kvůli hodnocení férovosti (sportovního ducha) soupeře. Toho hodnocení se jinak vyplňuje na papírovém dotazníku, které je zapotřebí zpracovat. Aplikace by tuto práci měla značně usnadnit.
 
 	\section{Motivace}
 
-	Realizace této práce vzešla z nápadu na rozšíření mobilní aplikace Catcher, kterou čeští hráči frisbee používají. 
-	Jeden z požadavků byl, aby se aplikace dala použít na různých zařízeních, jelikož pro organizaci turnaje je pohodlnější použít notebook či stolní počítač, kdežto pro získání informací o zápasech, turnajích a hodnocení spirit of the game může být praktičtější mobilní zařízení.
+		Realizace této práce vzešla z nápadu na rozšíření mobilní aplikace Catcher, kterou čeští hráči frisbee používají. 
+		Jeden z požadavků byl, aby se aplikace dala použít na různých zařízeních, jelikož pro organizaci turnaje je pohodlnější použít notebook či stolní počítač, kdežto pro získání informací o zápasech, turnajích a hodnocení spirit of the game může být praktičtější mobilní zařízení. Další z~možných rozšíření by bylo například propojení s databází České asociace létajícího disku.
 
 \end{introduction}
 
 \chapter{Návrh a analýza}
+	Před vytvořením 
 	
 	\section{Problematika}
-	% TODO klasicky problem predelat vs nova aplikace ?
+		% TODO klasicky problem predelat vs nova aplikace ?
 
-	% jak se situace má nyní a co by mohlo být lepší
+		% jak se situace má nyní a co by mohlo být lepší
 
-	% ... Vzhledem k tématu aplikace je několik funkčních požadavků
+		% ... Vzhledem k tématu aplikace je několik funkčních požadavků
 	\section{Vztah uživatele s aplikací}
-	Již z tématu jako takového vyplývá několik scénářů a použití.
+		Již z tématu jako takového vyplývá několik scénářů a použití.
 
-	Lidé, kteří se o tento sport zajímají se dají rozdelit do následujících skpin:
-	\begin{itemize}
-		\item Organizátoři
-		\item Zástupci týmů (trenéři)
-		\item Hráči
-		\item Fanoušci
-	\end{itemize}
+		Lidé, kteří se o tento sport zajímají se dají rozdelit do následujících skpin:
 
-	Pro běh aplikace budou zapotřebí tyto role:
-	\begin{itemize}
-		\item Správce
-		\item Organizátor
-		\item Tým
-		\item Fanoušek
-	\end{itemize}
+		\begin{itemize}
+			\item Organizátoři
+			\item Zástupci týmů (trenéři)
+			\item Hráči
+			\item Fanoušci
+		\end{itemize}
 
-	\subsection{Správce}
+		Pro běh aplikace budou zapotřebí tyto role:
 
+		\begin{itemize}
+			\item Správce
+			\item Organizátor
+			\item Tým
+			\item Fanoušek
+		\end{itemize}
+
+		\subsection{Správce}
 
 	% TODO posat klíčové akce, které budou uživatelé provádět
 
 	% TODO posat další funkcionalitu aplikace
 
+	% TODO persony - ui pohled
+
 	\section{Možnosti řešení}
-	Systému pro skórování Ultimate frisbee by mohl být provozován jako mobilní, desktopová nebo webová aplikace. Vzhledem k použitelnosti aplikace je potřeba data ukládat na server, aby nebylo celé hodnocení závislé pouze na jediném zařízení. Možnost importu a exportu dat je zde nedostačující, v průběhu turnaje mají mít všichni přehled a není vhodné čekat na export dat.
-	
-	\subsection{Mobilní aplikace}
-	Mobilní aplikace má výhodu dostupnosti. Další nevýhodou je psaní rozpisů týmů, hráčů a turnajů. Je nepraktické psát takové množství dat na mobilním telefonu či tabletu a to i v případě, že by existovala databáze hráčů. Tento problém by částečně řešila možnost importu dat, zde by zas bylo složité přesně specifikovat očekávaný formát a to hlavně u rozpisu turnajů.
-	
-	\subsection{Desktopová aplikace}
-	Desktopová aplikace je na rozdíl od mobilní vhodná pro vyplňování dat, ale nepraktická při hodnocení sportovního ducha soupeře. Turnaje se konají i na venkovních hřištích a každý tým by tak musel mít k dispozici notebook.
-	
-	\subsection{Webová aplikace}
-	Webová aplikace má značnou výhodu v přenosnosti mezi platformami, data lze vyplnit na jakémkoli PC a hodnotit lze na mobilním zařízení. Optimalizace pro oba typy zařízení by zde měla být dostačující.
-	
-	\subsection{Způsob propojení backendu a frontendu}
-	Při tvorbě aplikace se nabízí možnost vytvořit API, pomocí kterého bude komunikovat serverová část aplikace starající se o data s uživatelským rozhraním, které bude poskytovat možnosti práce s těmito daty. Jednoznačnou výhodou je zde možnost další implementace více druhů aplikací, které budou optimalizované pro konkrétní použití a budou sdílet data. Tento přístup by měl zajistit možnost rozšiřování jak z hlediska funkcionality tak z hlediska vývoje aplikací pro libovolné zařízení, které má možnost připojení k internetu.
+		Systému pro skórování Ultimate frisbee by mohl být provozován jako mobilní, desktopová nebo webová aplikace. Vzhledem k použitelnosti aplikace je potřeba data ukládat na server, aby nebylo celé hodnocení závislé pouze na jediném zařízení. Možnost importu a exportu dat je zde nedostačující, v průběhu turnaje mají mít všichni přehled a není vhodné čekat na export dat.
 		
-\section{Zvolené řešení}
-	S ohledem na celkem rozhodující faktor pro použitelnost aplikace v praxi, kterým je dostupnost jsme zvolili webovou aplikaci s tím, že komunikace zařízení a serveru bude probíhat přes API. 
-	
-	% TODO predelat !!!
-	Budu zde mít také možnost zužitkovat některé své zkušenosti s~tvorbou webových stránek. Nový je pro mě pohled ze strany uživatele a kladení důrazu na~jednoduchost používání pro uživatele.
-	
-	V praxi by mohl turnaj probíhat jako příprava turnaje předem na PC, případné korekce lze vyřídit na tabletu či chytrém telefonu a stejně tak hodnocení. Také by mohl být k dispozici jeden notebook pro bodování průběhu hry. Dále by měl každý tým alespoň jedno mobilní zařízení, na kterém by hodnotil soupeře. V dnešní době se také může stát, že bude každý hráč hodnotit z~vlastního zařízení, s čímž by měla aplikace počítat.
+		\subsection{Mobilní aplikace}
+			Mobilní aplikace má výhodu dostupnosti. Nevýhodou je psaní rozpisů týmů, hráčů a celková tvorba turnajů. Je nepraktické psát takové množství dat na mobilním telefonu či tabletu a to i v případě, že by existovala databáze hráčů. Tento problém by částečně řešila možnost importu dat, zde bylo zas bylo složité přesně specifikovat očekávaný formát a to hlavně u rozpisu turnajů.
+		
+		\subsection{Desktopová aplikace}
+			Desktopová aplikace je na rozdíl od mobilní vhodná pro vyplňování dat, ale nepraktická při hodnocení sportovního ducha soupeře. Turnaje se konají i na venkovních hřištích a každý tým by tak musel mít k dispozici notebook. Zkrátka by zde chyběla požadovaná mobilita.
+		
+		\subsection{Webová aplikace}
+			Webová aplikace má značnou výhodu v přenosnosti mezi platformami, data lze vyplnit na jakémkoli PC a hodnotit lze na mobilním zařízení. Optimalizace pro oba typy zařízení by zde měla být dostačující.
+		
+		\subsection{Způsob propojení backendu a frontendu}
+			Při tvorbě aplikace se nabízí možnost vytvořit API, pomocí kterého bude komunikovat serverová část aplikace starající se o data s uživatelským rozhraním, které bude poskytovat možnosti práce s těmito daty. Jednoznačnou výhodou je zde možnost další implementace více druhů aplikací, které budou optimalizované pro konkrétní použití a budou sdílet data. Tento přístup by měl zajistit možnost rozšiřování jak z hlediska funkcionality tak z hlediska vývoje aplikací pro libovolné zařízení, které má možnost připojení k internetu.
+		
+	\section{Zvolené řešení}
+		S ohledem na celkem rozhodující faktor pro použitelnost aplikace v praxi, kterým je dostupnost jsme zvolili webovou aplikaci s tím, že komunikace zařízení a serveru bude probíhat přes Rest API. % TODO
+		
+		V praxi by mohl turnaj probíhat jako příprava turnaje předem na desktopovém počítači nebo notebooku. Jeden notebook by byl k~dispozici pro bodování průběhu hry. Dále by měl každý tým nějaké mobilní zařízení, na kterém by hodnotil spirit of the game. Tato funkce je zároveň jednou z velice užitečných oproti skórování bez aplikace, kde týmy vyplňují dotazníky, které se musí následně ručně zpracovávat a vyhodnocovat.
 
 	% TODO použité technologie
 
-\chapter{Realizace}
+\chapter{Návrh aplikace}
+	Doposud jsem vymezil prostřední, ve kterém se aplikace bude vyvýjet, nyní se zaměřím na nástroje, které k vývoji použiji.
+
+	% github
 
 	% TODO 
+	\section{Zvolené technologie}
+		Z analýzy vyplynulo, že budu navrhovat webovou aplikaci. Použití HTML a CSS je tedy automatické. Otázkou zůstává jaký programovací jazyk použít. Jelikož by se melo jednat o moderní uživatelské rozhraní, bude potřeba interaktivních prvků, tedy použití javascriptu. Nyní je k dispozici několik možností jak komunikovat přes API a jak pracovat se získanými daty. Možností je mnoho, lze použít například PHP, python nebo zůstat rovnou u javascriptu. Vzhledem k interaktivitě a k dnešním možnostem javascriptu se mi tato možnost zamlouvá, ale zbývá zhodnotit, zda nemá i kritické slabiny, které by chod aplikace mohly ovlivnit. Možnou nevýhodou JS je práce s daty na uživatelově zařízení, je tedy možnost, že by mohl uživatel upravit data tak, že by to narušilo chod aplikace? A to jak chtěně tak i nechtěně? O data se bude starat backend, kde se data mění jen na základě jednotlivých požadavků. Každý požadavek je vždy zkontrolován na straně serveru, což uživatel ovlivnit nemůže. Pokud tedy uživatel upraví data pouze na svém zařízení, má to vliv pouze na uživatele, který tak učinil a to jen než například obnoví navštěvovanou stránku.
+
+		Javascript je dnes velmi populární, existuje mnoho knihoven a frameworků. Rozhodl jsem se toho využít a vybral jsem si AngularJS. Co se stylů týče, použiji bootstrap, který umožní jednoduché a responzivní umístění prvků.
+
+		\subsection{Bootstrap}
+		
+		\subsection{AngularJS}
+
+	\section{Použitá řešení}
+
+\chapter{Realizace}
 
 \chapter{Testování uživatelského rozhraní}
 	
-	\subsection{Heuristická analýza}
+	\section{Heuristická analýza}
+		Tato analýza spočívá v kontrole uživatelského rozhraní expertem, resp. někým z oboru, oproti obecně osvědčeným a ověřeným pravidlům či postupům. 
+	% TODO vzdy pojmenovat problem a priradit dulezitost
 
-	\subsubsection{Viditelnost stavu systému}
-	Aplikace celkově neobsahuje příliš úrovní obsahu. Uživatel vždy vidí zvýrazněnou položku v menu. Pokud se některá akce skládá z více kroků nebo je k dispozici více možností, je k dispozici orientace pomocí záložek. Běžný uživatel se setká maximálně se dvěma úrovněmi menu a to hlavní menu a záložkové. V administraci jsou i případy, kde je použita ještě třetí úroveň, jednotlivé úrovně jsou přehledně odsazené, takže by se uživatel neměl v obsahu ztácet.
+		\subsection{Viditelnost stavu systému}
+			Aplikace celkově neobsahuje příliš úrovní obsahu. Uživatel vždy vidí zvýrazněnou položku v menu. Pokud se některá akce skládá z více kroků nebo je k dispozici více možností, je k dispozici orientace pomocí záložek. Běžný uživatel se setká maximálně se dvěma úrovněmi menu a to hlavní menu a záložkové. V administraci jsou i případy, kde je použita ještě třetí úroveň, jednotlivé úrovně jsou přehledně odsazené, takže by se uživatel neměl v obsahu ztácet.
 
-	Bylo by dobré ještě doplnit uživatelský panel po přihlášení, nyní je k dispozici jen tlačítko pro odhlášení. Informace o roli uživatele je jen ve zprávě o úspěšném přihlášení, poté již není tato informace uživateli dostupná.
+			Bylo by dobré ještě doplnit uživatelský panel po přihlášení, nyní je k dispozici jen tlačítko pro odhlášení. Informace o roli uživatele je jen ve zprávě o úspěšném přihlášení, poté již není tato informace uživateli dostupná.
 
-	Uživatel je o výsledku každé akce informován pomocí zprávy, která je stylovaná, tedy i barevně odlišená podle obsahu, bootstrapem.
+			Uživatel je o výsledku každé akce informován pomocí zprávy, která je stylovaná, tedy i barevně odlišená podle obsahu, bootstrapem.
 
-	\subsubsection{Propojení systému s reálným světem}
-	Neměly by být použité žádné termíny neznámé uživateli, některá slova jsou převzata z prostření frisbee, jinak je použitá jen běžná slovní zásoba.
+		\subsection{Propojení systému s reálným světem}
+			Neměly by být použité žádné termíny neznámé uživateli, některá slova jsou převzata z prostření frisbee, jinak je použitá jen běžná slovní zásoba.
 
-	\subsubsection{Uživatelova kontrola a svoboda}
-	Celá aplikace podporuje tlačítka "zpět" a "dopředu". Při vícekrokovém procesu je vždy možnost vrátit se zpět také pomocí již víše zmiňovaných záložek.
+		\subsection{Uživatelova kontrola a svoboda}
+			Celá aplikace podporuje tlačítka "zpět" a "dopředu". Při vícekrokovém procesu je vždy možnost vrátit se zpět také pomocí již víše zmiňovaných záložek.
 
-	\subsubsection{Předcházení chybám}
-	U formlulářů je u každé položky poskytnuta informace o chybě, pokud je některá z podmínek pro formát vsupu porušena. Při odeslání údajů se zkontrolují případné další chyby o kterých je uživatel informován, přičemž nepřichází o žádná vyplněná data.
+		\subsection{Předcházení chybám}
+			U formlulářů je u každé položky poskytnuta informace o chybě, pokud je některá z podmínek pro formát vsupu porušena. Při odeslání údajů se zkontrolují případné další chyby o kterých je uživatel informován, přičemž nepřichází o žádná vyplněná data.
 
-	\subsubsection{Připomenutí raději než odvolávání se}
-	Některé složitější formuláře interagují s vyplněnými daty například z předchozích kroků. Data jako taková uživatel žadává jen jednou, poté již pouze vybírá ze seznamu možností.
+		\subsection{Připomenutí raději než odvolávání se}
+			Některé složitější formuláře interagují s vyplněnými daty například z předchozích kroků. Data jako taková uživatel žadává jen jednou, poté již pouze vybírá ze seznamu možností.
 
-	\subsubsection{Flexibilita a efektivita použití}
-	Prozatím není aplikace příliš rozsáhlá a není zapotřebí mnoho kroků pro dokončení libovolné akce, navíc jsou všechny kroky povinné, pouze minimum informací je doplňujícího či popisujícího charakteru.
+		\subsection{Flexibilita a efektivita použití}
+			Prozatím není aplikace příliš rozsáhlá a není zapotřebí mnoho kroků pro dokončení libovolné akce, navíc jsou všechny kroky povinné, pouze minimum informací je doplňujícího či popisujícího charakteru.
 
-	\subsubsection{Estetický a minimalisticý design}
-	Každá stránka obsahuje pouze informace k dané akci a informace k tomu potřebné, jakékoli zprávy poskytované uživateli jsou shrnuté do stručné věty, popřípadě několika málo vět vystihujících dění v aplikaci.
+		\subsection{Estetický a minimalisticý design}
+			Každá stránka obsahuje pouze informace k dané akci a informace k tomu potřebné, jakékoli zprávy poskytované uživateli jsou shrnuté do stručné věty, popřípadě několika málo vět vystihujících dění v aplikaci.
 
-	\subsubsection{Pomoci uživatelům rozpoznat, diagnostikovat a zotavit se z chyb}
-	Chybové hlášky obsahujý nejdříve prostý text popisující chybu běžnému uživateli, pokud je chyba způsobena systémem je o tom uživatel ve zprávě informován. Jestliže jsou k dispozici další poskytnutelné upřesňující informace o chybě, jsou zahrnuty ve zprávě z důvodu rozpoznání chyby vývojáři.
+		\subsection{Pomoci uživatelům rozpoznat, diagnostikovat a zotavit se z chyb}
+			Chybové hlášky obsahujý nejdříve prostý text popisující chybu běžnému uživateli, pokud je chyba způsobena systémem je o tom uživatel ve zprávě informován. Jestliže jsou k dispozici další poskytnutelné upřesňující informace o chybě, jsou zahrnuty ve zprávě z důvodu rozpoznání chyby vývojáři.
 
-	\subsubsection{Pomoc a dokumentace}
-	% TODO
+		\subsection{Pomoc a dokumentace}
+			% TODO
 
-	\subsection{Kognitivní průchod}
+	\section{Kognitivní průchod}
 
-	\subsection{Testování použitelnosti}
+	\section{Testování použitelnosti}
 
 \begin{conclusion}
 	%sem napište závěr Vaší práce
@@ -191,38 +209,6 @@
 % \chapter{Návod k~použití této šablony}
 % 
 % Tento dokument slouží jako základ pro napsání závěrečné práce na Fakultě informačních technologií ČVUT v~Praze.
-% 
-% \section{Výběr základu}
-% 
-% Vyberte si šablonu podle druhu práce (bakalářská, diplomová), jazyka (čeština, angličtina) a kódování (ASCII, \mbox{UTF-8}, \mbox{ISO-8859-2} neboli latin2 a nebo \mbox{Windows-1250}). 
-% 
-% V~české variantě naleznete šablony v~souborech pojmenovaných ve formátu práce\_kódování.tex. Typ může být:
-% \begin{description}
-% 	\item[BP] bakalářská práce,
-% 	\item[DP] diplomová (magisterská) práce.
-% \end{description}
-% Kódování, ve kterém chcete psát, může být:
-% \begin{description}
-% 	\item[UTF-8] kódování Unicode,
-% 	\item[ISO-8859-2] latin2,
-% 	\item[Windows-1250] znaková sada 1250 Windows.
-% \end{description}
-% V~případě nejistoty ohledně kódování doporučujeme následující postup:
-% \begin{enumerate}
-% 	\item Otevřete šablony pro kódování UTF-8 v~editoru prostého textu, který chcete pro psaní práce použít -- pokud můžete texty s~diakritikou normálně přečíst, použijte tuto šablonu.
-% 	\item V~opačném případě postupujte dále podle toho, jaký operační systém používáte:
-% 	\begin{itemize}
-% 		\item v~případě Windows použijte šablonu pro kódování \mbox{Windows-1250},
-% 		\item jinak zkuste použít šablonu pro kódování \mbox{ISO-8859-2}.
-% 	\end{itemize}
-% \end{enumerate}
-% 
-% 
-% V~anglické variantě jsou šablony pojmenované podle typu práce, možnosti jsou:
-% \begin{description}
-% 	\item[bachelors] bakalářská práce,
-% 	\item[masters] diplomová (magisterská) práce.
-% \end{description}
 % 
 % \section{Použití šablony}
 % 
