--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,3 @@
-- callahan ??
-
 must-have
 
 - pokryt funkcionalitu
@@ -12,8 +10,6 @@ must-have
 
 	- vysledky !!!
 	- rozpisy !!!
-
-	- ikonka "+" prehodit na edit - uprava profilu
 
 nice-to-have
 - zobrazit informaci o prihlasenem uzivateli
@@ -30,4 +26,6 @@ nice-to-have
 ===================================================================================================
 
 pro realne pouziti:
+- novy turnaj predelat na pavouk / kazdy s kazdym
 - dodelat api GET zapasy / souperove, kterym ma klub ohodnotit spirit
+- dodelat api GET turnaje, kterych se tym ucastni a ma vytvorit soupisku
